--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <p onclick="movePage('https://4kapas.bandcamp.com/')">bandcamp</p>
                 <p onclick="movePage('https://soundcloud.com/4kapas')">soundcloud</p>
             </div>
+            <div class="link__box" style="display: block; margin-top: 28px; text-align: center;">
+                <p style="font-weight: bold; font-size: 18px;" onclick="movePage('https://soundcloud.com/4kapas/the-sublimation-of-ego')">the sublimation of ego..</p>
+            </div>
         </section>
     </main>
     <script>
