--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p onclick="movePage('https://soundcloud.com/4kapas')">soundcloud</p>
             </div>
             <div class="link__box" style="display: block; margin-top: 28px; text-align: center;">
-                <p style="font-weight: bold; font-size: 18px;" onclick="movePage('https://soundcloud.com/4kapas/the-sublimation-of-ego')">the sublimation of ego..</p>
+                <p style="font-weight: bold; font-size: 18px;" onclick="movePage('https://soundcloud.com/4kapas/neverlation')">++neverlation++</p>
             </div>
         </section>
     </main>
