--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p onclick="movePage('https://soundcloud.com/4kapas')">soundcloud</p>
             </div>
             <div class="link__box" style="display: block; margin-top: 28px; text-align: center;">
-                <p style="font-weight: bold; font-size: 18px;" onclick="movePage('https://soundcloud.com/4kapas/inti-raymi')">++inti raymi++</p>
+                <p style="font-weight: bold; font-size: 18px;" onclick="movePage('https://soundcloud.com/4kapas/1001a')">++천노 嘉孝 1001박++</p>
             </div>
         </section>
     </main>
