--- a/index.html
+++ b/index.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>4kapas</title>
-    <link rel="stylesheet" href="./css/common.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/common.css" />
+  </head>
+  <body>
     <main class="container">
-        <section class="section">
-            <div class="img__content">
-                <img src="./image/a1.jpg" alt="이미지" class="main__image">
-            </div>
-            <!-- <div class="text__content">
+      <section class="section">
+        <div class="img__content">
+          <img src="./image/new.jpg" alt="이미지" class="main__image" />
+        </div>
+        <!-- <div class="text__content">
                 <p>4kapas</p>
             </div> -->
-            <div class="link__box">
-                <p onclick="movePage('https://4kapas.bandcamp.com/')">bandcamp</p>
-                <p onclick="movePage('https://soundcloud.com/4kapas')">soundcloud</p>
-            </div>
-            <div class="link__box" style="display: block; margin-top: 28px; text-align: center;">
-                <p style="font-weight: bold; font-size: 18px;" onclick="movePage('https://soundcloud.com/4kapas/sets/new-tape-out-now-spiritdventure')">new tape out now [spiritdventure]</p>
-            </div>
-        </section>
+        <div class="link__box">
+          <p onclick="movePage('https://4kapas.bandcamp.com/')">bandcamp</p>
+          <p onclick="movePage('https://soundcloud.com/4kapas')">soundcloud</p>
+          <p onclick="movePage('https://soundcloud.com/4kapas')">youtube</p>
+        </div>
+        <div
+          class="link__box"
+          style="display: block; margin-top: 28px; text-align: center"
+        >
+          <p
+            style="font-weight: bold; font-size: 18px"
+            onclick="movePage('https://soundcloud.com/4kapas/sets/new-tape-out-now-spiritdventure')"
+          >
+            new tape out now [4kapasble]
+          </p>
+        </div>
+      </section>
     </main>
     <script>
-        window.onload = () => {
-            const imgEl = document.querySelector('.main__image');
-            const textContent = document.querySelector('.text__content p');
-            const randomNumber = Math.floor((Math.random() * 15))
-            
-            imgEl.src = `./image/a0.jpg`;
+      window.onload = () => {
+        const imgEl = document.querySelector(".main__image");
+        const textContent = document.querySelector(".text__content p");
+        const randomNumber = Math.floor(Math.random() * 15);
 
-            switch (randomNumber) {
-                case 2:
-                case 11:
-                case 1:
-                    textContent.style.color = '#fff';
-                break;
+        imgEl.src = `./image/new.jpg`;
 
-                case 4:
-                case 6:
-                case 14:
-                case 12:
-                    textContent.style.color = 'black';
-                break;
+        switch (randomNumber) {
+          case 2:
+          case 11:
+          case 1:
+            textContent.style.color = "#fff";
+            break;
 
-                case 13:
-                    textContent.style.color = 'blue';
-                break
-            }
+          case 4:
+          case 6:
+          case 14:
+          case 12:
+            textContent.style.color = "black";
+            break;
+
+          case 13:
+            textContent.style.color = "blue";
+            break;
         }
+      };
 
-        const movePage = (link) => {
-            window.location.href = link ?? '/'
-        }
-
+      const movePage = (link) => {
+        window.location.href = link ?? "/";
+      };
     </script>
-</body>
+  </body>
 </html>
