feat: 모바일 청첩장 section update
feat: 모바일 청첩장 section update

--- a/index.html
+++ b/index.html
@@ -61,30 +61,49 @@
     <main class="container">
       <section class="section">
         <div class="main-img-wrap reset">
-          <img src="./image/main_2.jpg" alt="" />
+          <img src="./image/main_3.png" alt="" />
 
           <div class="main-img-wrap postion-a">
-            <img src="./image/main_img_1.jpg" alt="" />
+            <img
+              src="./image/main_img_1.jpg"
+              alt=""
+              style="border-radius: 13px"
+            />
           </div>
         </div>
       </section>
       <!-- Main [Photo + Name + Date + Venue] -->
       <section class="section">
-        <div class="content" style="margin-top: 100px">
+        <div class="content" style="margin-top: 30px">
+          <div class="sub_img_wrap">
+            <img src="./image/flower.png" alt="" class="flower_img left" />
+          </div>
+          <div class="sub_img_wrap">
+            <img src="./image/flower.png" alt="" class="flower_img reverse" />
+          </div>
           <pre>
-            함께 있을 때 가장 나다운 모습이 되고, 
-            함께 있을 때 서로를 웃음짓게 하는 사람을 만나 
-            함께 맞는 열번째 겨울, 저희 결혼합니다. 
+              함께 있을 때 가장 나다운 모습이 되고, 
+              함께 있을 때 서로를 웃음짓게 하는 사람을 만나 
+              함께 맞는 열번째 겨울, 저희 결혼합니다. 
 
-            부부로서 나아갈 수많은 계절의 첫걸음을 
-            함께 축복해주시면 감사하겠습니다.
+              부부로서 나아갈 수많은 계절의 첫걸음을 
+              함께 축복해주시면 감사하겠습니다.
           </pre>
+          <div class="sub_img_wrap mt37">
+            <img src="./image/flower.png" alt="" class="flower_img left" />
+          </div>
+          <div class="sub_img_wrap">
+            <img src="./image/flower.png" alt="" class="flower_img reverse" />
+          </div>
         </div>
       </section>
 
       <!-- Calendar Section -->
       <section class="section">
         <div class="title">달력</div>
+        <div class="main-img-wrap reset">
+          <img src="./image/calendar.png" alt="" />
+        </div>
       </section>
 
       <!-- Photo Gallery Section -->
@@ -92,16 +111,70 @@
         <div class="title">사진 갤러리</div>
         <div class="grid">
           <div class="main-img-wrap">
-            <img src="./image/main_img_1.jpg" alt="" class="gallery-image" />
+            <img src="./image/1.jpg" alt="" class="gallery-image" />
           </div>
           <div class="main-img-wrap">
-            <img src="./image/main_img_1.jpg" alt="" class="gallery-image" />
+            <img src="./image/2.jpg" alt="" class="gallery-image" />
           </div>
           <div class="main-img-wrap">
-            <img src="./image/main_img_1.jpg" alt="" class="gallery-image" />
+            <img src="./image/3.jpg" alt="" class="gallery-image" />
           </div>
           <div class="main-img-wrap">
-            <img src="./image/main_img_1.jpg" alt="" class="gallery-image" />
+            <img src="./image/4.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/5.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/6.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/7.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/8.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/9.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/10.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/11.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/12.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/13.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/14.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/15.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/16.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/17.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/18.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/19.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/20.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/21.jpg" alt="" class="gallery-image" />
+          </div>
+          <div class="main-img-wrap">
+            <img src="./image/22.jpg" alt="" class="gallery-image" />
           </div>
         </div>
       </section>
@@ -115,35 +188,149 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="main-img-wrap">
-                  <img src="./image/main_img_1.jpg" alt="" />
+                  <img src="./image/1.jpg" alt="" />
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="main-img-wrap">
-                  <img src="./image/main_img_1.jpg" alt="" />
+                  <img src="./image/2.jpg" alt="" />
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="main-img-wrap">
-                  <img src="./image/main_img_1.jpg" alt="" />
+                  <img src="./image/3.jpg" alt="" />
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="main-img-wrap">
-                  <img src="./image/main_img_1.jpg" alt="" />
+                  <img src="./image/5.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/6.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/7.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/8.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/9.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/10.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/11.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/12.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/13.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/14.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/15.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/16.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/17.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/18.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/19.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/20.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/21.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/22.jpg" alt="" />
                 </div>
               </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
+            <!-- <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div> -->
+            <div class="swiper-scrollbar"></div>
           </div>
         </div>
       </div>
 
       <!-- Directions Section -->
       <section class="section">
-        <div class="title">오시는길 [약도 + 설명]</div>
+        <div class="sub_img_wrap">
+          <img
+            src="./image/heart2.png"
+            alt=""
+            style="width: 100px; margin: 0 auto 12px"
+          />
+        </div>
+        <div class="title">오시는길</div>
+
+        <div class="main-img-wrap reset">
+          <img src="./image/map.png" alt="" />
+        </div>
+        <pre>
+          자동차
+          서울특별시 영등포구 국회대로76길 16 여의도 켄싱턴호텔
+
+          버스
+          - 국회의사당, 국민은행 앞 하차
+          10, 70-2, 162, 163,260, 361, 5615,
+          5618, 6713,7613, G7625, 영등포10
+          - 국회의사당 앞 하차
+          1002, 163, 461,463,6623,6713 
+          - 켄싱턴호텔 여의도 하차
+          공항버스 6007
+          - 여의도 순복음교회 앞 하차
+          10,261, 463, 5633, 5634, 영등포10
+          
+          지하철
+          9호선 국회의사당역하차 - 1,2,3번 출구 - 도보 5분
+        </pre>
       </section>
 
       <!-- Account Information Section -->
@@ -159,13 +346,9 @@
     <script defer>
       // Swiper configuration
       var swiper = new Swiper(".mySwiper", {
-        pagination: {
-          el: ".swiper-pagination",
-          type: "fraction",
-        },
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
+        scrollbar: {
+          el: ".swiper-scrollbar",
+          hide: true,
         },
       });
 
