--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+
     <style>
       /* Modal overlay */
       .modal-overlay {
@@ -27,10 +27,10 @@
       /* Swiper modal */
       .swiper-modal {
         position: relative;
-        width: 80%;
+        width: 100%;
         max-width: 600px;
         background: #fff;
-        padding: 20px;
+        padding: 0px;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
       }
@@ -45,8 +45,13 @@
         color: #000;
         background: #fff;
         border-radius: 50%;
-        padding: 5px;
+        /* padding: 5px; */
         z-index: 999;
+        width: 32px;
+        display: flex;
+        height: 32px;
+        align-items: center;
+        justify-content: center;
       }
       .swiper-pagination {
         color: #000;
@@ -63,13 +68,36 @@
         <div class="main-img-wrap reset">
           <img src="./image/main_3.png" alt="" />
 
-          <div class="main-img-wrap postion-a">
+          <div class="main-img-wrap postion-a" style="text-align: center">
             <img
               src="./image/main_img_1.jpg"
               alt=""
-              style="border-radius: 13px"
+              style="
+                /* border-radius: 13px; */
+                width: 263px;
+                margin: 0 auto;
+                text-align: center;
+              "
             />
           </div>
+        </div>
+      </section>
+      <section class="section">
+        <div
+          class="text_areas line_heigh1 text_align_center"
+          style="
+            border-top: 2px solid #f4cce0;
+            border-bottom: 2px solid #f4cce0;
+            max-width: 230px;
+            margin: 0 auto 50px;
+            padding: 15px 0;
+          "
+        >
+          <p>2025년 1월 18일 토요일 오전11시</p>
+          <br />
+          <p>여의도 켄싱턴호털</p>
+          <br />
+          <p>15층 센트럴 파크 웨딩홀</p>
         </div>
       </section>
       <!-- Main [Photo + Name + Date + Venue] -->
@@ -81,14 +109,18 @@
           <div class="sub_img_wrap">
             <img src="./image/flower.png" alt="" class="flower_img reverse" />
           </div>
-          <pre>
-              함께 있을 때 가장 나다운 모습이 되고, 
-              함께 있을 때 서로를 웃음짓게 하는 사람을 만나 
-              함께 맞는 열번째 겨울, 저희 결혼합니다. 
-
-              부부로서 나아갈 수많은 계절의 첫걸음을 
-              함께 축복해주시면 감사하겠습니다.
-          </pre>
+          <div class="text_areas line_heigh1 text_align_center">
+            <p>함께 있을 때 가장 나다운 모습이 되고,</p>
+            <br />
+            <p>함께 있을 때 서로를 웃음짓게 하는 사람을 만나</p>
+            <br />
+            <p>함께 맞는 열번째 겨울, 저희 결혼합니다.</p>
+            <br />
+            <br />
+            <p>부부로서 나아갈 수많은 계절의 첫걸음을</p>
+            <br />
+            <p>함께 축복해주시면 감사하겠습니다.</p>
+          </div>
           <div class="sub_img_wrap mt37">
             <img src="./image/flower.png" alt="" class="flower_img left" />
           </div>
@@ -100,7 +132,7 @@
 
       <!-- Calendar Section -->
       <section class="section">
-        <div class="title">달력</div>
+        <div class="title" style="display: none">달력</div>
         <div class="main-img-wrap reset">
           <img src="./image/calendar.png" alt="" />
         </div>
@@ -108,6 +140,13 @@
 
       <!-- Photo Gallery Section -->
       <section class="section">
+        <div class="sub_img_wrap" style="display: block">
+          <img
+            src="./image/rose2.png"
+            alt=""
+            style="width: 122px; margin: 0 auto 63px"
+          />
+        </div>
         <div class="title">사진 갤러리</div>
         <div class="grid">
           <div class="main-img-wrap">
@@ -182,10 +221,15 @@
       <!-- Modal for Swiper -->
       <div class="modal-overlay">
         <div class="swiper-modal">
-          <span class="close-btn">&times;</span>
+          <span class="close-btn">×</span>
           <!-- Swiper -->
-          <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
+          <div class="swiper mySwiper swiper-initialized swiper-horizontal">
+            <div
+              class="swiper-wrapper"
+              id="swiper-wrapper-88d1027b65460ec12"
+              aria-live="polite"
+              style="transition-duration: 0ms; transition-delay: 0ms"
+            >
               <div class="swiper-slide">
                 <div class="main-img-wrap">
                   <img src="./image/1.jpg" alt="" />
@@ -293,8 +337,18 @@
               </div>
             </div>
             <!-- <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div> -->
-            <div class="swiper-scrollbar"></div>
+          <div class="swiper-button-prev"></div> -->
+            <div
+              class="swiper-scrollbar swiper-scrollbar-horizontal"
+              style="opacity: 0; transition-duration: 400ms"
+            >
+              <div class="swiper-scrollbar-drag"></div>
+            </div>
+            <span
+              class="swiper-notification"
+              aria-live="assertive"
+              aria-atomic="true"
+            ></span>
           </div>
         </div>
       </div>
@@ -305,46 +359,193 @@
           <img
             src="./image/heart2.png"
             alt=""
-            style="width: 100px; margin: 0 auto 12px"
+            style="width: 128px; margin: 0 auto 12px"
           />
         </div>
-        <div class="title">오시는길</div>
 
-        <div class="main-img-wrap reset">
-          <img src="./image/map.png" alt="" />
+        <div id="map" style="height: 400px; margin-bottom: 25px"></div>
+        <div class="title">찾아오시는 길</div>
+        <div class="text_areas line_height_17">
+          <p>[자동차]</p>
+          <p>서울특별시 영등포구 국회대로76길 16 여의도 켄싱턴호텔</p>
+          <br />
+          <p>[버스]</p>
+          <p>- 국회의사당, 국민은행 앞 하차</p>
+          <p>10, 70-2, 162, 163,260, 361, 5615,</p>
+          <p>5618, 6713,7613, G7625, 영등포10</p>
+          <p>- 국회의사당 앞 하차</p>
+          <p>1002, 163, 461,463,6623,6713</p>
+          <p>- 켄싱턴호텔 여의도 하차</p>
+          <br />
+          <p>[공항버스 6007]</p>
+          <p>- 여의도 순복음교회 앞 하차</p>
+          <p>10,261, 463, 5633, 5634, 영등포10</p>
+          <br />
+          <p>[지하철]</p>
+          <p>9호선 국회의사당역하차 - 1,2,3번 출구 - 도보 5분</p>
         </div>
-        <pre>
-          자동차
-          서울특별시 영등포구 국회대로76길 16 여의도 켄싱턴호텔
-
-          버스
-          - 국회의사당, 국민은행 앞 하차
-          10, 70-2, 162, 163,260, 361, 5615,
-          5618, 6713,7613, G7625, 영등포10
-          - 국회의사당 앞 하차
-          1002, 163, 461,463,6623,6713 
-          - 켄싱턴호텔 여의도 하차
-          공항버스 6007
-          - 여의도 순복음교회 앞 하차
-          10,261, 463, 5633, 5634, 영등포10
-          
-          지하철
-          9호선 국회의사당역하차 - 1,2,3번 출구 - 도보 5분
-        </pre>
       </section>
 
       <!-- Account Information Section -->
       <section class="section">
         <div class="title">계좌번호</div>
+        <div class="account col_couple_name" var="account">
+          <div
+            class="account_wrap groom aos-init aos-animate"
+            aos=""
+            data-aos="fade-up"
+          >
+            <div class="account_box active">
+              신랑측
+              <i class="xi-angle-down"></i>
+            </div>
+            <ul class="account_list" style="display: block">
+              <li var="isGroomBank">
+                <input
+                  type="text"
+                  class="account"
+                  value="518402-01-408649"
+                  var="groomBankAcc"
+                  style="display: none"
+                  maxlength="254"
+                />
+                <div class="left_box">
+                  <h4>신랑</h4>
+                  <div class="acc_num" var="groomBankAcc">1004-249-170333</div>
+                  <div class="acc_name">
+                    <span class="bank" var="groomBankName">우리응해</span>
+                    <span class="holder" var="groomBankHolder">김준수</span>
+                  </div>
+                </div>
+                <div class="right_box">
+                  <a
+                    href="javascript:;"
+                    class="s_btn"
+                    onclick="wedding.copyBank(this)"
+                    >복사</a
+                  >
+                  <a
+                    var="groomBankKakaopay_"
+                    href="https://salondeletter.com/w/8xc7zg0beb"
+                    target="_blank"
+                    class="s_btn kakao_btn"
+                    >PAY</a
+                  >
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div
+            class="account_wrap bride aos-init aos-animate"
+            aos=""
+            data-aos="fade-up"
+          >
+            <div class="account_box bride_account">
+              신부측
+              <i class="xi-angle-down"></i>
+            </div>
+            <ul class="account_list">
+              <li var="isBrideBank">
+                <input
+                  type="text"
+                  class="account"
+                  value="446801-01-555528"
+                  style="display: none"
+                  var="brideBankAcc"
+                  maxlength="254"
+                />
+                <div class="left_box">
+                  <h4>신부</h4>
+                  <div class="acc_num" var="brideBankAcc">33313-961-841</div>
+                  <div class="acc_name">
+                    <span class="bank" var="brideBankName">카카오뱅크</span>
+                    <span class="holder" var="brideBankHolder">이예나</span>
+                  </div>
+                </div>
+                <div class="right_box">
+                  <a
+                    href="javascript:;"
+                    class="s_btn"
+                    onclick="wedding.copyBank(this)"
+                    >복사</a
+                  >
+                  <a
+                    var="brideBankKakaopay_"
+                    href="https://qr.kakaopay.com/FE1lHL04X"
+                    target="_blank"
+                    class="s_btn kakao_btn"
+                    >PAY</a
+                  >
+                </div>
+              </li>
+              <li var="isBrideDadBank">
+                <input
+                  type="text"
+                  class="account"
+                  value="018-21-0694-222"
+                  style="display: none"
+                  var="brideDadBankAcc"
+                  maxlength="254"
+                />
+                <div class="left_box">
+                  <h4>신부 <span var="brideDadText">아버지</span></h4>
+                  <div class="acc_num" var="brideDadBankAcc">
+                    018-21-0694-222
+                  </div>
+                  <div class="acc_name">
+                    <span class="bank" var="brideDadBankName">국민은행</span>
+                    <span class="holder" var="brideDadBankHolder">신민재</span>
+                  </div>
+                </div>
+                <div class="right_box">
+                  <a
+                    href="javascript:;"
+                    class="s_btn"
+                    onclick="wedding.copyBank(this)"
+                    >복사</a
+                  >
+                </div>
+              </li>
+              <li var="isBrideMomBank">
+                <input
+                  type="text"
+                  class="account"
+                  value="854-21-0214-054"
+                  style="display: none"
+                  var="brideMomBankAcc"
+                  maxlength="254"
+                />
+                <div class="left_box">
+                  <h4>신부 <span var="brideMomText">어머니</span></h4>
+                  <div class="acc_num" var="brideMomBankAcc">
+                    854-21-0214-054
+                  </div>
+                  <div class="acc_name">
+                    <span class="bank" var="brideMomBankName">국민은행</span>
+                    <span class="holder" var="brideMomBankHolder">장연희</span>
+                  </div>
+                </div>
+                <div class="right_box">
+                  <a
+                    href="javascript:;"
+                    class="s_btn"
+                    onclick="wedding.copyBank(this)"
+                    >복사</a
+                  >
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
 
-    <!-- Swiper JS -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0f774301663c4292c86c39ef1a23b00f&libraries=services"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper and Modal -->
-    <script defer>
-      // Swiper configuration
+    <script defer="">
       var swiper = new Swiper(".mySwiper", {
         scrollbar: {
           el: ".swiper-scrollbar",
@@ -352,29 +553,57 @@
         },
       });
 
-      // Modal functionality
       const modalOverlay = document.querySelector(".modal-overlay");
       const galleryImages = document.querySelectorAll(".gallery-image");
       const closeBtn = document.querySelector(".close-btn");
 
-      // Show modal when clicking on gallery image
       galleryImages.forEach((img) => {
         img.addEventListener("click", () => {
           modalOverlay.style.display = "flex";
         });
       });
 
-      // Hide modal when clicking the close button
       closeBtn.addEventListener("click", () => {
         modalOverlay.style.display = "none";
       });
 
-      // Hide modal when clicking outside of swiper
       modalOverlay.addEventListener("click", (e) => {
         if (e.target === modalOverlay) {
           modalOverlay.style.display = "none";
         }
       });
+    </script>
+    <script>
+      var container = document.getElementById("map");
+      var options = {
+        center: new kakao.maps.LatLng(33.450701, 126.570667),
+        level: 3,
+      };
+
+      var map = new kakao.maps.Map(container, options);
+
+      var geocoder = new kakao.maps.services.Geocoder();
+
+      geocoder.addressSearch(
+        "서울특별시 영등포구 국회대로76길 16",
+        function (result, status) {
+          if (status === kakao.maps.services.Status.OK) {
+            var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+            var marker = new kakao.maps.Marker({
+              map: map,
+              position: coords,
+            });
+
+            var infowindow = new kakao.maps.InfoWindow({
+              content:
+                '<div style="width:150px;text-align:center;padding:6px 0;">여의도 켄싱턴 호텔</div>',
+            });
+
+            map.setCenter(coords);
+          }
+        }
+      );
     </script>
   </body>
 </html>
